fixed urls and updated fixtures

--- a/image_repo/fixtures/permissions.fixitures.yaml
+++ b/image_repo/fixtures/permissions.fixitures.yaml
@@ -3,6 +3,7 @@
   fields:
     perm: private
     description: Only image owner can see this image
+- model: image_repo.Permissions
   pk: 2
   fields:
     perm: public
